# can-I-still-code

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  Procfile  README.md  actions.md  agenticbrainrot_coc_instructions.md  appliku.yaml  db.sqlite3  high_level_plan.md  manage.py  pyproject.toml  recommendations.md  release.sh  research_plan.md  run.sh
.github/workflows/: ci.yml
.junie/: README.md  guidelines.md
agenticbrainrot/: conftest.py
agenticbrainrot/accounts/: adapters.py  admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  views.py
agenticbrainrot/accounts/migrations/: 0001_initial.py  0002_alter_auditevent_event_type.py  0006_alter_auditevent_event_type.py
agenticbrainrot/accounts/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_unsubscribe.py  test_urls.py  test_views.py  test_withdrawal.py
agenticbrainrot/blog/: apps.py  feeds.py  sitemaps.py  urls.py  views.py
agenticbrainrot/blog/posts/: 2026-05-24-early-ai-usage-signals.md
agenticbrainrot/challenges/: admin.py  apps.py  models.py  services.py  urls.py  views.py
agenticbrainrot/challenges/fixtures/: DEVIATIONS.md  clarifications.json
agenticbrainrot/challenges/migrations/: 0001_initial.py  0002_initial.py  0003_challenge_source_challenge_source_metadata_and_more.py  0004_add_clarification_to_challenge.py  0006_add_run_count_to_challengeattempt.py  0007_add_complexity_metrics_to_challengeattempt.py  0008_add_reference_solution_and_efficiency_ratio.py  0009_widen_difficulty_range_to_include_zero.py  0010_add_data_quality_flag_to_challengeattempt.py
agenticbrainrot/challenges/tests/: test_challenges.py  test_fixture_integrity.py  test_let_people_try.py
agenticbrainrot/coding_sessions/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
agenticbrainrot/coding_sessions/migrations/: 0001_initial.py  0002_codesession_is_mock.py  0003_wants_harder.py
agenticbrainrot/coding_sessions/tests/: test_session_flow.py
agenticbrainrot/consent/: admin.py  apps.py  forms.py  middleware.py  models.py  urls.py  views.py
agenticbrainrot/consent/migrations/: 0001_initial.py  0002_alter_optionalconsentrecord_consent_type.py  0004_add_consent_form_content.py
agenticbrainrot/consent/tests/: test_consent_flow.py
agenticbrainrot/dashboard/: apps.py  urls.py  views.py
agenticbrainrot/dashboard/tests/: test_dataset.py  test_personal_results.py
agenticbrainrot/helpers/: export_helpers.py  task_helpers.py
agenticbrainrot/helpers/tests/: test_task_helpers.py
agenticbrainrot/pages/: admin.py  api.py  apps.py  forms.py  models.py  sitemaps.py  urls.py  views.py
agenticbrainrot/pages/migrations/: 0003_waitlist_signup.py
agenticbrainrot/pages/templates/: base.html  robots.txt
agenticbrainrot/pages/templatetags/: markdown_tags.py
agenticbrainrot/pages/tests/: test_commands.py  test_landing_page.py
agenticbrainrot/static/css/: font-awesome.min.css  project.css
agenticbrainrot/static/js/: code-editor.js  project.js  pyodide-worker.js
agenticbrainrot/surveys/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
agenticbrainrot/surveys/tests/: test_models.py  (+1 more)
agenticbrainrot/utils/: rollbar_utils.py
analysis/: .Rhistory  README.md  power_simulation.Rmd
analysis/2026-05-24-ai-usage-correlation/: README.md  analyse.py  data.json
config/: middleware.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  remote_on_local.py  test.py
docs/: conf.py
ethics/: amendment-request-form.docx  consent-form 26-3-26.docx  data-management-plan 26-3-26.docx  generate_dmp_docx.py  information-sheet 26-3-26.docx  proposed_updates.md  recruitment-template 26-3-26.docx  research-ethics-full-form 26-3-26.docx  research-ethics-full-form-FILLED.md  risk_assessment__dontNeedAsOnline.docx
ethics/ethics_md/: consent-form-FILLED.md  data-management-plan-FILLED.md  information-sheet-FILLED.md  recruitment-template-FILLED.md  research-ethics-full-form.docx
other/: psf_submission.md
preregistration/: aspredicted.md
tests/: test_canonical_host_middleware.py  test_production_settings.py
tests/e2e/: conftest.py  test_solutions.py
(+281 files in other folders)
